--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body{
     background-size:  900% 900%;
     position: relative;
     animation: change 10s ease-in-out infinite;
-
     color: #3E4160;
     font-family: 'Rubik', sans-serif;
     letter-spacing: 2px;
@@ -17,19 +16,27 @@ body{
     
     
 }
+
 .profile-picture{
     border: 1px solid #DECFEE;
     border-width:  3px;
-
+    position: sticky;
+    
+    
     display: block;
     margin-left: auto;
     margin-right: auto;
+    
+    
+    
+
 
     margin-top: 10%;
     height: auto;
     max-width: 100px;
 
     border-radius: 50%;
+    
     
 }
 .profile-name{
@@ -60,9 +67,13 @@ body{
     display: block;
     margin-right:  auto;
     margin-left: auto;
-    border-radius: 10px;
+    
     font-size: 24px;
+
+    
 }
+
+
 .a{
     text-decoration: none;
     color: #DECFEE;
@@ -83,19 +94,36 @@ a:hover{
     
 
 }
-
-@keyframes change{
-    0%{
-        background-position:0 50% ;
-    }
-    50%{
-        background-position:100% 50% ;
-    }
-    100%{
-        background-position:0 50% ;
-    }
-
+.links:hover{
+    color: #3E4160;
+    background: #9FDBE6;
+    backdrop-filter: blur(px);
+    box-shadow: 0 25px 45px rgba(0,0,0,0.3);
+    border: 1px solid rgba(255,255,255,0.3);
+    border-right: 2px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    background: rgba(255,255,255,0.1);
+    border-radius: 15px;
+    animation: juiver .1s linear ;
 }
+
+
+
+@keyframes juiver{
+    0% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    }
+    100% {
+        transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+    }
+
+    
+}
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -222,6 +250,7 @@ section .color:nth-child(3)
     min-height: 400px;
     background: rgba(255,255,255,0.1);
     border-radius: 10px;
+   
      /*esta es la horientacion de la carta flex = horizontal, nada es vertical*/ 
     justify-content: center;
     align-items: center;
@@ -232,6 +261,87 @@ section .color:nth-child(3)
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     
 }
+@keyframes change{
+    0%{
+        background-position:0 50% ;
+    }
+    50%{
+        background-position:100% 50% ;
+    }
+    100%{
+        background-position:0 50% ;
+    }
+
+}
+.container span{
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    width: 150px;
+    height: 150px;
+    /*background: #CA8BF5; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    
+ }
+ .container span::before
+ {
+     content: 'PAGINA TEST ';
+     position: absolute;
+     width: 150%;
+     height: 40px;
+     background: #CA8BF5;
+     transform: rotate(-45deg) translateY(-20px);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     text-transform: uppercase;
+     font-weight: 600;
+     color:cornsilk;
+     letter-spacing: 0.1em;
+     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+     
+ }
+ .container span::after
+ {
+     content: '';
+     position:absolute;
+     bottom: 0;
+     left: 0;
+     width: 10px;
+     height: 10px;
+     background:#726580 ;
+     z-index: -1;
+     box-shadow: 140px -140px #726580;
+ 
+ }
+
+.github{
+ position:absolute;
+    text-align:center;
+    
+    
+    margin-left: 360px;
+    margin-right: 10px;
+    border: 1px solid #3E4160;
+    border-width:  14px;
+    padding: 5px ;
+    
+
+    
+    backdrop-filter: blur(px);
+    box-shadow: 0 25px 45px rgba(0,0,0,0.1);
+    border: 1px solid rgba(68, 7, 7, 0.3);
+    border-right: 2px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    background: (#CA8BF5,#DECFEE,#9FDBE6,#7678BC,#3E4160,);
+    border-radius: 1px;
+
+
+}
+
 @keyframes change{
     0%{
         background-position:0 50% ;
