--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ body{
     border-width:  14px;
     padding: 15px ;
     margin-bottom: 20px;
+    text-decoration:none;
 
     
     backdrop-filter: blur(px);
